--- a/.drone.yml
+++ b/.drone.yml
@@ -3,22 +3,20 @@ type: kubernetes
 name: feature
 
 steps:
-  - name: restore cache
-    image: ghcr.io/teamyapp/drone-cache:0.0.9
+  - name: retrieve cache
+    image: ghcr.io/teamyapp/drone-cache:0.1.9
     volumes:
-      - name: cache
+      - name: go-mod-cache
         path: /go/pkg/mod
+      - name: cache
+        path: /var/lib/cache
     settings:
-      s3_endpoint: sfo3.digitaloceanspaces.com
-      s3_access_key_id:
-        from_secret: SPACE_ACCESS_KEY
-      s3_secret:
-        from_secret: SPACE_SECRET
-      s3_bucket: teamyapp
-      remote_root_dir: cache/go
-      restore: true
+      mode: retrieve
+      version_file_path: go.sum
       cacheable_absolute_paths:
         - /go/pkg/mod
+      storage_type: volume
+      volume_cache_root_dir: /var/lib/cache
   - name: run unit tests
     image: golang:1.18
     volumes:
@@ -26,22 +24,20 @@ steps:
         path: /go/pkg/mod
     commands:
       - go test ./...
-  - name: refresh cache
-    image: ghcr.io/teamyapp/drone-cache:0.0.9
+  - name: persist cache
+    image: ghcr.io/teamyapp/drone-cache:0.1.9
     volumes:
-      - name: cache
+      - name: go-mod-cache
         path: /go/pkg/mod
+      - name: cache
+        path: /var/lib/cache
     settings:
-      s3_endpoint: sfo3.digitaloceanspaces.com
-      s3_access_key_id:
-        from_secret: SPACE_ACCESS_KEY
-      s3_secret:
-        from_secret: SPACE_SECRET
-      s3_bucket: teamyapp
-      remote_root_dir: cache/go
-      refresh: true
+      mode: persist
+      version_file_path: go.sum
       cacheable_absolute_paths:
         - /go/pkg/mod
+      storage_type: volume
+      volume_cache_root_dir: /var/lib/cache
 volumes:
   - name: cache
     temp: {}
